src/main/java/com/example/demo/exceptions/errors/InvalidIdException.java
package com.example.demo.exceptions.errors;

public class InvalidIdException  extends RuntimeException{
}
